# lab3_f

./: CMakeLists.txt  find.c  free_delete.c  main.c  print_table.c  spetial_operations.c  table_1_funcs.c  table_2_funcs.c  table_creation.c  table_functions.c  tests.c
headers/: commands.h  spetial_operations.h  table_1_funcs.h  table_2_funcs.h  table_creation.h  table_functions.h  table_structs.h  tests.h
